<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityCuatro"
    android:background="@drawable/fondo"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_dispensador_2_michi"
        android:textSize="30dp"
        android:padding="10dp"
        android:textColor="@color/black"
        android:background="@color/back"
        />

    <ImageView
        android:id="@+id/ic_patita"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_toLeftOf="@id/ic_patita_gato"
        android:layout_marginStart="7dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="7dp"
        android:src="@drawable/patita"
        />

    <ImageView
        android:id="@+id/ic_patita_gato"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="7dp"
        android:layout_alignParentEnd="true"
        android:src="@drawable/patita_gato"
        />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/fondo_form">

        <TextView
            android:id="@+id/txt_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:padding="10dp"
            android:text="@string/txt_lugar"
            android:textColor="@color/black"
            android:textSize="25dp" />


        <TextView
            android:id="@+id/txt_food_lvl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_place"
            android:padding="10dp"
            android:text="@string/txt_nivel_del_alimento"
            android:textColor="@color/black"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/txt_water_lvl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_food_lvl"
            android:padding="10dp"
            android:text="@string/txt_nivel_del_agua"
            android:textColor="@color/black"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/txt_water_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_water_lvl"
            android:padding="10dp"
            android:text="@string/txt_temperatura_del_agua"
            android:textColor="@color/black"
            android:textSize="25dp" />

    </RelativeLayout>

</RelativeLayout>